feat: add the frontend
