# server/services/product.ts
@@ -5,16 +5,14 @@ import { db as unitDb } from './unit'
 
 type Product = Components['schemas']['Product']
 
-const db: Product[] = [
-  {
-    id: randomUUID(),
-    name: 'Product 1',
-    price: 1000,
-    type: 'product',
-    vat: 1900,
-    unit: unitDb[0].id,
-  },
-]
+const db: Product[] = Array.from({ length: 100 }, (_, i) => ({
+  id: randomUUID(),
+  name: `Product ${i}`,
+  price: Math.trunc(Math.random() * 10000),
+  type: Math.random() > 0.5 ? 'product' : 'service',
+  vat: Math.trunc(Math.random() * 3000),
+  unit: unitDb[0].id!,
+}))
 
 export async function getListLength() {
   return db.length
